--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
                 <h4>Lorem ipsum</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, placeat nostrum itaque pariatur dolore ducimus optio obcaecati praesentium quam. Libero.</p>
             </div>
-            
+            <div class="image-1"></div>
+        </section>
+
+        <section class="container-2">
+            <hr class="break-mid">
+            <p class="caption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit nobis laborum expedita commodi fugiat facere magnam ab ullam, consectetur repudiandae.</p>
         </section>
     </body>/
 </html>
