--- a/index.html
+++ b/index.html
@@ -40,5 +40,20 @@
             <hr class="break-mid">
             <p class="caption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit nobis laborum expedita commodi fugiat facere magnam ab ullam, consectetur repudiandae.</p>
         </section>
+        <section class="container-3">
+            <hr class="break-2">
+            <div class="p-2">
+                <h4>Lorem,ipsum</h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto nisi aspernatur eos, fugiat placeat veniam expedita similique asperiores veritatis tempore.</p>
+            </div>
+            <div class="p-2">
+                <h4>Lorem, ipsum</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima eligendi distinctio perferendis commodi, eveniet ab accusamus laborum aut velit dolor.</p>
+            </div>
+            <div class="p-2">
+                <h4>Lorem, ipsum</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sequi non magni aperiam voluptatibus ipsam iure totam! Amet, quos voluptatum!</p>
+            </div>
+        </section>
     </body>/
 </html>
